# sim-plugin-comsol

./: .gitignore  CHANGELOG.md  LICENSE-NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-wheel.yml  publish.yml
src/sim_plugin_comsol/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_comsol/_skills/comsol/: SKILL.md  SKILL.zh-CN.md
src/sim_plugin_comsol/_skills/comsol/base/reference/: java_api_patterns.md  java_batch_patterns.md  mph_file_format.md  offline_postprocessing_exports.md  runtime_introspection.md
src/sim_plugin_comsol/_skills/comsol/base/workflows/: debug_failed_exec.md  model_review_loop.md
src/sim_plugin_comsol/_skills/comsol/base/workflows/surface_mount_package/: README.md
src/sim_plugin_comsol/_skills/comsol/doc-search/: README.md
src/sim_plugin_comsol/_skills/comsol/doc-search/src/sim_comsol_doc/: discover.py
src/sim_plugin_comsol/_skills/comsol/solver/6.0/: notes.md
src/sim_plugin_comsol/_skills/comsol/solver/6.1/: notes.md
src/sim_plugin_comsol/_skills/comsol/solver/6.2/: notes.md
src/sim_plugin_comsol/_skills/comsol/solver/6.4/: notes.md
src/sim_plugin_comsol/desktop_attach/: __init__.py  audit.py  cli.py  health.py  open.py  shell.py  submit.py  target.py
src/sim_plugin_comsol/lib/: __init__.py  describe.py  mph_inspect.py
tests/: test_comsol_driver.py  test_describe.py  test_desktop_attach.py  test_mph_inspect.py  test_protocol.py  test_skill_contract.py  test_wheel_contents.py
