[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-plugin-comsol"
version = "0.1.0"
description = "COMSOL Multiphysics driver for sim-cli, distributed as an out-of-tree plugin"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Weiqi Ji", email = "jiweiqi10@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "sim-cli-core>=0.3",
    "mph>=1.2,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.entry-points."sim.drivers"]
comsol = "sim_plugin_comsol:ComsolDriver"

[project.entry-points."sim.skills"]
comsol = "sim_plugin_comsol:skills_dir"

[project.urls]
Homepage = "https://github.com/svd-ai-lab/sim-plugin-comsol"
Issues = "https://github.com/svd-ai-lab/sim-plugin-comsol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_plugin_comsol"]
